--- a/src/spins.scss
+++ b/src/spins.scss
@@ -97,7 +97,7 @@ html, body {
   }
 
   &-label {
-    font-size: 0.1px;
+    font-size: 0.09px;
     letter-spacing: 0.004px;
     font-weight: bolder;
     fill: white;
